Support for "readonlyIf" in grid view button (#1675)

--- a/axelor-web/src/main/webapp/css/slickgrid.css
+++ b/axelor-web/src/main/webapp/css/slickgrid.css
@@ -217,6 +217,12 @@
 	cursor: pointer;
 }
 
+.slick-cell.button .disabled {
+	outline: none;
+	opacity: 0.45;
+	cursor: inherit;
+}
+
 .slick-cell.button,
 .slick-cell-checkboxsel {
 	text-align: center;
