--- a/axelor-web/src/main/webapp/css/application.css
+++ b/axelor-web/src/main/webapp/css/application.css
@@ -49,6 +49,7 @@
 
 @import url('scrollbar.css');
 @import url('main.css');
+@import url('print.css') print;
 
 @import url('tabs.css');
 @import url('splitter.css');
