--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -938,8 +938,14 @@ table.field-details .help-text hr {
 	background: #fff;
 	
 	border-radius: 4px;
-	
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+
 	z-index: 11;
+}
+
+.filter-menu hr {
+	margin: 8px 0;
 }
 
 .filter-menu .filter-list {
@@ -950,6 +956,14 @@ table.field-details .help-text hr {
 	display: table-cell;
 	width: 50%;
 	padding-right: 40px;
+}
+
+.filter-menu .filter-list > dl dt {
+	padding-bottom: 4px;
+}
+
+.filter-menu .filter-list > dl dt i {
+	margin-right: 2px;
 }
 
 .filter-menu .filter-list > dl dd {
@@ -969,6 +983,10 @@ table.field-details .help-text hr {
 	margin-bottom: 8px;
 }
 
+.filter-menu input {
+	height: inherit;
+}
+
 .filter-menu input[type=radio],
 .filter-menu input[type=checkbox] {
 	margin-top: 3px;
@@ -977,6 +995,33 @@ table.field-details .help-text hr {
 .filter-menu .show-archived {
 	margin-left: 26px;
 }
+
+.filter-form .form-layout .form-item input {
+	width: auto;
+	min-width: inherit;
+	max-width: 170px;
+}
+.filter-form .form-layout .form-item.filter-select {
+	width: 170px;
+	min-width: 170px;
+}
+
+.filter-form .form-layout .filter-remove {
+	width: 16px;
+	min-width: 16px;
+	max-width: 16px;
+}
+
+.filter-form.update-form .form-item {
+	min-width: 170px;
+}
+
+.filter-form .links {
+	margin: 4px;
+	padding-left: 14px;
+}
+
+/* end filter/update menu */
 
 .btn-group > .btn-fix-left {
 	border-top-left-radius: 4px;
