--- a/axelor-web/src/main/webapp/partials/views/grid.html
+++ b/axelor-web/src/main/webapp/partials/views/grid.html
@@ -27,5 +27,8 @@
       </div>
     </div>
   </div>
+  <div class='view-print-header visible-print'>
+    <h3>{{schema.title}}</h3>
+  </div>
   <div ui-view-grid x-view="schema" x-data-view="dataView" x-handler="this"></div>
 </div>
