Fixed object selection in search view

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -198,6 +198,7 @@ table.form-layout td.form-item.v-align-top {
 	margin-top: 4px !important;
 }
 
+.form-item > a.btn,
 .form-item-container button {
 	padding: 2px 10px 2px;
 	min-width: 26px;
