Improved grid widget header display

--- a/axelor-web/src/main/webapp/css/slickgrid.css
+++ b/axelor-web/src/main/webapp/css/slickgrid.css
@@ -295,7 +295,12 @@
 }
 
 .slick-sort-indicator {
-	margin-right: 18px;
+	display: none;
+}
+
+.slick-sort-indicator-asc,
+.slick-sort-indicator-desc {
+	display: inline-block;
 }
 
 .slick-header-menu {
