--- a/axelor-core/src/main/resources/views/User.xml
+++ b/axelor-core/src/main/resources/views/User.xml
@@ -2,10 +2,17 @@
 <object-views xmlns="http://apps.axelor.com/xml/ns/object-views" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 	xsi:schemaLocation="http://apps.axelor.com/xml/ns/object-views http://apps.axelor.com/xml/ns/object-views/object-views_2.0.xsd">
 
+	<selection name="select.language">
+    	<option value="en">English</option>
+    	<option value="fr">French</option>
+  	</selection>
+  
     <grid name="user-grid" title="Users">
         <field name="name"/>
         <field name="code"/>
-        <field name="group"/>
+        <field name="email"/>
+		<field name="language"/>
+		<field name="group"/>
     </grid>
     
     <form name="user-form" title="User" cols="1" onSave="com.axelor.auth.AuthService:validate">
@@ -25,10 +32,22 @@
             <field name="activateOn" validIf="!activateOn || (activateOn &amp;&amp; !expiresOn) || (activateOn &amp;&amp; expiresOn &amp;&amp; $moment(expiresOn) &gt;= $moment(activateOn))"/>
         	<field name="expiresOn" validIf="!expiresOn || (!activateOn &amp;&amp; expiresOn) || (activateOn &amp;&amp; expiresOn &amp;&amp; $moment(expiresOn) &gt;= $moment(activateOn))"/>
         </group>
+        <group title="Preferences">
+			<field name="email" widget="Email" />
+			<field name="language" />
+			<field name="action" domain="self.type = 'action-view'" widget="SuggestBox" canNew="false"/>
+        </group>
         <field name="roles" grid-view="role-grid" form-view="role-form" />
         <field name="permissions"/>
     </form>
     
+	<form name="user-preferences-form" title="Preferences" cols="2" colWidths="100,*"
+		onNew="com.axelor.auth.AuthService:preferences">
+		<field name="email" widget="Email" />
+		<field name="language" />
+		<field name="action" domain="self.type = 'action-view'" widget="SuggestBox" canNew="false"/>
+	</form>
+	
     <action-condition name="action-condition-user-validCode">
         <check error="Code length should be greater than 2." field="code" if="code?.length() &lt; 2"/>
     </action-condition>
