Improved hot edit feature (RM-1210)
- use hot edit icon to toggle
- removed double click event
- proper cleanup

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -532,6 +532,19 @@ td.form-item > * {
 	cursor: default;
 }
 
+.form-item-container .hot-edit-icon {
+	width: 18px;
+	position: absolute;
+	left: -16px;
+	top: 7px;
+	cursor: pointer;
+	display: none;
+}
+
+form.readonly .form-item-container:hover .hot-edit-icon {
+	display: inline;
+}
+
 table.field-details {
 	width: 100px;
 }
