Allow alternative confirm dialog button titles (RM-1668)
With 'view.confirm.yes-no' from application settings,
we can now use Yes/No titles for the confirm button.

--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -266,6 +266,10 @@ header .navbar-inverse .dropdown-submenu:focus > a {
             box-shadow: inset 0 1px 0 white;
 }
 
+.ui-dialog-buttonpane .btn {
+	padding: 16px auto;
+}
+
 .ui-dialog .ui-dialog-content {
 	padding: 4px;	
 }
