Fixed record pager change display

--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -548,6 +548,12 @@ input[readonly], select[readonly], textarea[readonly] {
 
 .record-pager-change button {
 	height: auto !important;
+	margin-top: 5px !important;
+}
+
+.record-pager-change input {
+	margin-top: 5px;
+	height: 20px;
 }
 
 .stackbar {
