--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -1163,3 +1163,7 @@ table.field-details .help-text hr {
 [class *= hilite-].form-item-container {
 	background-color: inherit !important;
 }
+
+.notify-stack {
+	width: 340px;
+}
