--- a/axelor-web/src/main/webapp/css/view.portal.css
+++ b/axelor-web/src/main/webapp/css/view.portal.css
@@ -134,6 +134,8 @@
 	border: 1px dashed #c9c9c9;
 	visibility: visible !important;
 	
+	margin-bottom: 4px;
+	
 	-webkit-border-radius: 4px;
 	   -moz-border-radius: 4px;
 			border-radius: 4px;
