Fixed some css to allow overriding field widths.

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -249,8 +249,11 @@ table.form-layout fieldset {
 	padding-top: 1px;
 }
 
-.picker-input {
+.picker-input,
+.form-item .ui-spinner {
 	box-sizing: border-box;
+	position: relative;
+	display: inline-block;
 }
 
 .picker-input > input {
