Fixed Tree view issues.

--- a/axelor-web/src/main/webapp/partials/views/tree.html
+++ b/axelor-web/src/main/webapp/partials/views/tree.html
@@ -4,7 +4,7 @@
       <div class="container">
         <span class="view-title">{{title}}</span>
         <div class="record-pager pull-right">
-          <span>{{pagerText()}}</span>
+          <span class="record-pager-text">{{pagerText()}}</span>
           <div class="btn-group">
             <button class="btn" ng-disabled="!canPrev()" ng-click="onPrev()">
               <i class="icon-chevron-left"></i>
