Don't show hot-edit icon on readonly fields (RM-1875)

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -595,6 +595,10 @@ form.readonly .form-item-container:hover .hot-edit-icon {
 	display: inline;
 }
 
+[x-readonly="true"] .hot-edit-icon {
+	display: none !important;
+}
+
 table.field-details {
 	width: 100px;
 }
