--- a/axelor-web/src/main/webapp/partials/views/form.html
+++ b/axelor-web/src/main/webapp/partials/views/form.html
@@ -12,25 +12,15 @@
           <button class="btn" ng-click="onSave()" ng-if="isEditable() && (canEdit() || canSave())"  title="{{ 'Save' | t}}">
             <i class="icon icon-save"></i> <span ng-hide="tbTitleHide" x-translate>Save</span>
           </button>
-          <button class="btn" ng-click="onCopy()" ng-if="canCopy()" ng-disabled="!canCopy()" title="{{ 'Copy' | t}}">
-            <i class="icon icon-copy"></i> <span ng-hide="tbTitleHide" x-translate>Copy</span>
-          </button>
           <button class="btn" ng-click="onCancel()" ng-if="hasButton('cancel') && !canEdit()" ng-disabled="!canCancel()" title="{{ 'Cancel' | t}}">
             <i class="icon icon-ban-circle"></i> <span ng-hide="tbTitleHide" x-translate>Cancel</span>
           </button>
-        </div>
-        <div class="btn-group">
           <button class="btn" ng-click="onBack()" ng-if="hasButton('back')" ng-disabled="!canBack()" title="{{ 'Back' | t}}">
             <i class="icon icon-reply"></i> <span ng-hide="tbTitleHide" x-translate>Back</span>
           </button>
-          <button class="btn" ng-click="onRefresh()" ng-if="hasButton('refresh')" title="{{ 'Refresh' | t}}">
-            <i class="icon icon-refresh"></i> <span ng-hide="tbTitleHide" x-translate>Refresh</span>
+          <button class="btn" ng-disabled="!canShowAttachments()" ng-click="onShowAttachments()" ng-class="{'has-attachments': record.$attachments}">
+          	<i class="icon icon-pushpin"></i><sub ng-if="record.$attachments"> {{record.$attachments}}</sub>
           </button>
-        </div>
-        <div class="btn-group" ui-btn-group-helper>
-          <button class="btn" ui-show="hasAuditLog()" ng-click="onShowLog($event)"><i class="icon icon-eye-open"></i></button>
-          <button class="btn" ui-show="canShowAttachments()" ng-click="onShowAttachments()" ng-class="{'has-attachments': record.$attachments}"><i class="icon icon-pushpin"></i><sub ng-if="record.$attachments"> {{record.$attachments}}</sub></button>
-          <button class="btn" ui-show="hasHelp()" ng-click="onShowHelp()"><i class="icon icon-info-sign"></i></button>
         </div>
         <div class="btn-group" ng-if="toolbar" ui-btn-group-helper>
           <button ng-repeat="btn in toolbar | filter:{custom: true}" ui-tool-button></button>
@@ -38,6 +28,7 @@
         <div class="btn-group" ng-if="toolbar" ui-btn-group-helper style="display: none;">
           <button ng-repeat="btn in toolbar | filter:{custom: false}" ui-tool-button></button>
         </div>
+        <div ui-menu-bar menus="toolmenu" handler="this"></div>
         <div ui-menu-bar menus="menubar" handler="this"></div>
         <div ui-view-switcher class="pull-right"></div>
         <div ui-record-pager class="pull-right"></div>
